--- a/HTML/index.html
+++ b/HTML/index.html
@@ -28,9 +28,12 @@
     <style>
 		
 		/* BODY BACKGROUND */
-		body { background-color: #142933; }
+		body { background-color: #29323c; /* fallback for old browsers */
+
+        background: -webkit-linear-gradient(to top, #485563, #29323c);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to top, #485563, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
     	
-		h1 { font-family: 'Playfair Display', cursive; font-weight: 400; }
+		h1 { font-family: 'Playfair Display', cursive; font-weight: 400;}
 
     </style>
 
