background color updated

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,7 @@
 		body { background-color: #29323c; /* fallback for old browsers */
 
         background: -webkit-linear-gradient(to top, #485563, #29323c);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to top, #485563, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+        background: linear-gradient(to top, #000000, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
     	
 		h1 { font-family: 'Playfair Display', cursive; font-weight: 400;}
 
@@ -63,7 +63,7 @@
             
             <!-- DESCRIPTION -->
             <p>I enjoy creating intuitive apps.
-                I have a serious passion for immersive UI and creating dynamic user experience. </p>
+                I have a serious passion for creating immersive UI and dynamic user experience. </p>
 
             <p>
               I take 
