heading updated to normal text

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
 
     <!-- CUSTOMIZATONS -->
     <style>
-		
+
 		/* BODY BACKGROUND */
 		body { background-color: #29323c; /* fallback for old browsers */
 
@@ -50,22 +50,14 @@
         <div class="content">
             
             <!-- PROFILE IMAGE -->
-            <img class="profile-image rounded" src="images/about-it.jpg" alt="profile image of Adam"/>
+            <img class="profile-image rounded" src="images/about-boy.jpg" alt="profile image of Adam"/>
             
             <!-- TITLE -->
             <h1>
                 Hi,
                 <br>I'm Priyank,
-                <br>
+                <br> mobile app developer
 
-                <!-- TEXTS TO BE TYPED -->
-                <span id="typed"></span>
-                <div id="typed-strings">
-                    <p>mobile app <span class="highlight blue">developer</span></p>
-                    <p><span class="text yellow">web enthusiast</span></p>
-                    <p>passionate UI <span class="highlight green">designer</span></p>
-                </div>
-                <!-- TEXTS TO BE TYPED -->
 
             </h1>
             <!-- TITLE -->
