--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,7 +23,6 @@
     
     <!-- CUSTOM FONT FROM GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Overpass+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/fonts/hk-grotesk/style.css">
 
     <!-- CUSTOMIZATONS -->
     <style>
@@ -34,8 +33,8 @@
         background: -webkit-linear-gradient(to top, #29323c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to top, #29323c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
     	
-		p { font-family: 'Overpass Mono', monospace; font-weight: 300; }
-        h1 { font-weight: 500; }
+		p { font-family: 'Overpass Mono', monospace; font-weight: 300; font-size: small}
+        h1 { font-family: Lato, sans-serif; font-weight: 500; }
 
     </style>
 
