profile pic added

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -96,8 +96,8 @@
 		/* BODY BACKGROUND */
 		body { background-color: #29323c; /* fallback for old browsers */
 
-        background: -webkit-linear-gradient(to top, #29323c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to top, #29323c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+        background: -webkit-linear-gradient(#29323c, #000000, #29323c);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to top, #000000, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
     	
 		p { font-family: 'Overpass Mono', monospace; font-weight: 300; font-size: small}
         h1 { font-family: Lato, sans-serif; font-weight: 500; }
