--- a/HTML/index.html
+++ b/HTML/index.html
@@ -82,7 +82,7 @@
         background: linear-gradient(to top, #000000, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
     	
 		p { font-family: 'Overpass Mono', monospace; font-weight: 300; font-size: small}
-        h1 { font-family: Lato, sans-serif; font-weight: 500; }
+        h1 { font-weight: 400; }
 
     </style>
 
