icon image and apple touch icon updated

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,8 @@
     <title>iamspd | Mobile App Developer</title>
     
     <!-- FAV and TOUCH ICONS -->
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/ico/apple-touch-icon.png"/>
     
     <!-- FONTS -->
